<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App -->
    <string name="app_name">CompassNavigator</string>

    <!-- Common -->
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="not_available">n. a.</string>
    
    <!-- Activities -->
    <string name="title_activity_navigator">@string/app_name</string>
    <string name="title_activity_add_destination">Add destination</string>
    <string name="title_activity_select_destination">Select destination</string>
    <string name="title_activity_delete_destinations">Delete destinations</string>
    <!-- NavigationView -->
    <string name="unknown_distance">distance n. a.</string>
    <string name="unknown_destination">Not selected</string>
    <!-- Actions -->
    <string name="action_add_destination">@string/title_activity_add_destination</string>
    <string name="action_select_destination">@string/title_activity_select_destination</string>
    <string name="action_delete_destinations">@string/title_activity_delete_destinations</string>
    <string name="action_status">Status</string>
    <string name="action_select_all">Select all</string>
    <string name="action_unselect_all">Unselect all</string>
    <!-- NavigatorActivity -->
    <string name="navigator_destination" formatted="false">Destination: %s</string>
    <!-- AddDestinationActivity -->
    <string name="add_name">Name</string>
    <string name="add_latitude">Latitude [Degree]</string>
    <string name="add_longitude">Longitude [Degree]</string>
    <string name="add_add">Add</string>
    <string name="add_destination_added">Destination added</string>
    <string name="add_error_empty" formatted="false">Can\' be empty</string>
    <string name="add_error_latitude" formatted="false">Out of range -90..90</string>
    <string name="add_error_longitude" formatted="false">Out of range -180..180</string>
    <!-- SelectDestinationActivity -->
    <string name="item_geo" formatted="false">Lat: %s, Lon: %s</string>
    <!-- DeleteDestinationsActivity -->
    <string name="delete_confirm_title">@string/title_activity_delete_destinations</string>
    <string name="delete_confirm_message">Are sure to delete the selected destinations?</string>
    <string name="delete_delete_info" formatted="false">Deleted %d destination(s)</string>
	<!-- StatusDialog -->
	<string name="status_last_provider">Last provider:</string>
	<string name="status_last_location">Last location:</string>
	<string name="status_geo">@string/item_geo</string>
	<string name="status_age" formatted="false">(%s)</string>
	<string name="status_age_not_available">(Time unknown)</string>
</resources>